[package]
name = "web_scrapepkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
html_parser = "0.6.3"
scraper = "0.13.0"